backend/src/main/java/com/example/backend/error/user/FieldsCannotBeEmptyException.java
package com.example.backend.error.user;

public class FieldsCannotBeEmptyException extends RuntimeException {
    
    public FieldsCannotBeEmptyException(String message) {
        super(message);
    }
    
}
